[gd_scene load_steps=2 format=3 uid="uid://dkqn4ggkqnmyg"]

[ext_resource type="Script" path="res://MinimizableList.gd" id="1_kcvrj"]

[node name="MinimizableList" type="Control"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 50.0
script = ExtResource("1_kcvrj")

[node name="OpenClose" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "+"

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 4.0
offset_right = 62.0
offset_bottom = 27.0

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 34.0
offset_right = 145.0
offset_bottom = 63.0

[connection signal="pressed" from="OpenClose" to="." method="_on_open_close_pressed"]
